Tecdg para TecDig

--- a/contato.html
+++ b/contato.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TecDg - Contato</title>
+    <title>TecDig - Contato</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Contato com TecDg</h1>
+        <h1>Contato com TecDig</h1>
         <nav>
             <a href="/">Home</a>
             <a href="sobre.html">Sobre</a>
@@ -34,7 +34,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 TecDg. Todos os direitos reservados.</p>
+        <p>&copy; 2024 TecDig. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
