modified:   sobre.html

--- a/sobre.html
+++ b/sobre.html
@@ -19,7 +19,7 @@
     <main>
         <section>
             <h2>Quem Somos</h2>
-            <p>O TecDg é um site dedicado a explorar e compartilhar conhecimentos sobre Tecnologia da Informação Digital. Nossa missão é fornecer conteúdo de qualidade para entusiastas e profissionais da área.</p>
+            <p>O TecDig é um site dedicado a explorar e compartilhar conhecimentos sobre Tecnologia da Informação Digital. Nossa missão é fornecer conteúdo de qualidade para entusiastas e profissionais da área.</p>
         </section>
     </main>
     <footer>
