modified:   index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <section>
             <h2>Explorando a Tecnologia da Informação Digital</h2>
-            <p>Seu recurso definitivo para tudo sobre Tecnologia da Informação Digital.</p>
+            <p>Seu recurso definitivo sobre Tecnologia da Informação Digital.</p>
         </section>
     </main>
     <footer>
